Revision history for Perl extension AnyEvent.

	- work around recurring bugs in Tk by dup'ing filehandles, the
          only method with good success chances to work on Tk.
        - lift the restriction of only one watcher per fh direction.
        - changed probe ordet to ptefer coro adaptors.

3.0  Mon Apr  7 21:30:23 CEST 2008
	- Coro::Signal changed semantics, roll our own, also cleaning
          up the Coro implementation in general.
        - rename Coro backend to CoroEvent.
        - add some decision helping paragraph to the manpage that should
          help people to decide wether AnyEvent is the right thing for them.

2.9  Mon Jan 28 13:31:54 CET 2008
	- update for EV 3.0 API changes.

2.8  Sun Nov 25 15:06:03 CET 2007
	- waitpid can validly return 0. accept this fact of life
          instead of reporting it to any watchers.

2.7  Fri Nov 23 11:41:14 CET 2007
	- force use of AnyEvent::Impl::Perl in testsuite, there is
          too much breakage outside AnyEvent.
        - deliver signals synchronously in AnyEvent::Impl::Perl
          or any other event loop that relies on AnyEvents child
          watcher emulation. *Could* help with hanging testsuite
          (except when Event or EV are installed).

2.6  Fri Nov  9 20:36:35 CET 2007
	- fix bug in testsuite.
        - move EV adaptor modules to AnyEvent.
        - add Coro+EV adaptor module.

2.55 Tue Nov  6 17:41:32 CET 2007
	- add EV to the list of supported event models.
        - do not auto-reset pid watchers, pass pid and status to them.
        - allow a pid of zero to watch for all children in child watchers.

2.54 Wed Jul 18 17:36:23 CEST 2007
	- work around a perl bug that results in
          BEGIN not safe after errors--compilation aborted without
          any discernible reason or error message by once
          again not use'ing strict.

2.53 Sun Jul  8 10:51:53 CEST 2007
	- make Glib interface work again (spotted by elmex).

2.52 Wed Mar  7 18:36:16 CET 2007