@@ -3,7 +3,11 @@ Revision history for Perl extension AnyEvent.
 	- work around recurring bugs in Tk by dup'ing filehandles, the
           only method with good success chances to work on Tk.
         - lift the restriction of only one watcher per fh direction.
-        - changed probe ordet to ptefer coro adaptors.
+        - changed probe order to prefer coro adaptors.
+        - explain why recursion into the event loop is not supported
+          unless the backend supports it (only Coro::EV does without
+          any restrictions...).
+        - add simple manpages for all backend modules.
 
 3.0  Mon Apr  7 21:30:23 CEST 2008
 	- Coro::Signal changed semantics, roll our own, also cleaning
